--- a/static/css/tweet.css
+++ b/static/css/tweet.css
@@ -52,7 +52,7 @@ body {
     .comment-container {
         width: 300px;
         filter: blur(0px);
-        height: 550px;
+        height: 420px;
         display: flex;
         flex-direction: column;
         overflow: auto;
@@ -83,6 +83,38 @@ body {
 
 }
 
+.tweet-body-container .comment-form {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    width: 100%;
+    justify-content: end;
+    /* gap: 6px; */
+    padding: 6px 12px;
+
+    .submit-button {
+        width: 50%;
+        margin-top: 8px;
+        padding: 10px 20px;
+        background-color: #333333;
+        color: #fff;
+        border: none;
+        border-radius: 5px;
+        font-size: 16px;
+        cursor: pointer;
+    }
+
+    textarea {
+        width: 100%;
+        height: 100px;
+  border-radius: 8px;
+  background: #FFFFFF40;
+  padding: 4px;
+  border-color: #FFFFFF40;
+  max-height: 100px;
+  overflow: auto;
+    }
+}
 
 .get-started-button {
     margin-top: 20px;
